[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpt"
version = "1.1"
description = "Discrete Chirp Transform Software"
authors = [
    { name = "Jaxson Mitchell", email = "mitchj62@my.erau.edu" }
]
readme = ""
requires-python = ">=3.8"
dependencies = [
    "scipy",
    "numpy",
    "matplotlib",
    "h5py",
    "tqdm",
    "cupy"
]

[tool.setuptools.packages.find]
where = ["."]
